# Hotel-reviews-scraping-and-analysis

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  hotel_Scrap_analysis.ipynb  main.py  pyproject.toml
.github/workflows/: deploy.yml
src/: hotel_Scrap_analysis.ipynb  main.py
