[project]
name = "hotel-reviews-scraping-and-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apify-client>=3.0.2",
    "db-dtypes>=1.7.0",
    "google-cloud-bigquery>=3.42.1",
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pandas-gbq>=0.35.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pylint>=4.0.6",
]
